STRING(REGEX REPLACE ".*/(.*)" "\\1" CURRENT_FOLDER ${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB SOURCEFILE *.cpp)

if (CMAKE_CXX_STANDARD GREATER 14)
    list(REMOVE_ITEM SOURCEFILE "${CMAKE_CURRENT_SOURCE_DIR}/autoptr.cpp")
endif ()
message(STATUS ${SOURCEFILE})
add_library(${CURRENT_FOLDER} OBJECT ${SOURCEFILE})
